# Ahk2Python

./: converting_example.md  install_hooks.sh  pyproject.toml
src/ahk2python/: converter.py  parser.py  test_script.ahk
