[project]
name = "ahk2python"
version = "0.1.0"
description = "Convertor for your AHK scripts to Python scripts!"
authors = [
    {name = "Silletr",email = "silletr@duck.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
